ManometrService location filter
